[package]
name = "pareidolia"
description = "A facial recognition login service for Linux."
repository = "https://github.com/icorbrey/pareidolia"
license = "MIT OR Apache-2.0"
version = "0.0.0"
edition = "2021"

[lib]
name = "pareidolia"
path = "src/lib.rs"

[[bin]]
name = "pareidolia-bin"
path = "src/main.rs"

[dependencies]
